--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <main>
       <section id="tarefas">
         <div id="content">
-          <h2>Tarefas</h2>
-          <h5>Nenhuma tarefa registrada</h5>
+          <h1>Tarefas</h1>
+          <h5 id="contadorTarefas">Total de Tarefas registrada: 0</h5>
           <button onclick="abrirModal()">Nova tarefa</button>
         </div>
         <ul id="lista"></ul>
